--- a/package.json
+++ b/package.json
@@ -1,25 +1,15 @@
 {
   "name": "pulperia-chebs",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JAGARCIAV/PULPERIA-chebs.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/JAGARCIAV/PULPERIA-chebs/issues"
-  },
-  "homepage": "https://github.com/JAGARCIAV/PULPERIA-chebs#readme",
-  "devDependencies": {
-    "@tailwindcss/cli": "^4.2.0",
-    "tailwindcss": "^4.2.0"
-  }
+  "private": true,
+"scripts": {
+  "build": "tailwindcss -i ./src/input.css -o ./dist/output.css --minify",
+  "watch": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
+},
+"devDependencies": {
+  "@tailwindcss/cli": "^4.2.0",
+  "tailwindcss": "^4.2.0"
 }
+  
+}
+
